--- a/class-select.html
+++ b/class-select.html
@@ -3,99 +3,162 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Select Class - Himaayah Institute of Arabic and Islamic Studies</title>
+  <title>Select Class | Himaayah Institute of Arabic and Islamic Studies</title>
+
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            primary: '#1e40af', // Deep Blue
-            secondary: '#eff6ff', // Light Blue
-          },
-        },
-      },
-    };
-  </script>
-</head>
-<body class="bg-secondary min-h-screen flex flex-col items-center justify-center px-4">
 
-  <!-- Header -->
-  <header class="w-full text-center mb-10">
-    <h1 class="text-3xl font-bold text-primary">Select Your Class</h1>
-    <p class="text-gray-600 mt-2 text-sm">Welcome to HIAIS Student Portal. Choose your class to continue.</p>
-    
-  </header>
-
-  <!-- Class Selection -->
-  <div class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-2xl border border-gray-100 animate-fadeIn">
-    <form id="classForm" class="space-y-6">
-
-      <div>
-        <label for="studentName" class="block text-sm font-medium text-gray-700 mb-1">Student Name</label>
-        <input type="text" id="studentName" name="studentName" placeholder="Enter your full name"
-          class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-primary focus:border-primary" required>
-      </div>
-
-      <div>
-        <label for="classSelect" class="block text-sm font-medium text-gray-700 mb-1">Select Class</label>
-        <select id="classSelect" name="class" required
-          class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-primary focus:border-primary">
-          <option value="">-- Choose your class --</option>
-          <option value="awwal">Awwal Ibtidaaiyyah</option>
-          <option value="thaaniy">Thaaniy Ibtidaaiyyah</option>
-          <option value="thaalith">Thaalith Ibtidaaiyyah</option>
-          <option value="awwal-idaadi">Awwal Idaadiyyah</option>
-        </select>
-      </div>
-
-      <div class="flex flex-col sm:flex-row gap-4 justify-between mt-6">
-        <button type="button" onclick="goToExam()"
-          class="w-full sm:w-1/2 bg-primary text-white py-2 rounded-lg hover:bg-blue-900 transition font-medium">
-          Take Exam
-        </button>
-        <button type="button" onclick="goToResults()"
-          class="w-full sm:w-1/2 border border-primary text-primary py-2 rounded-lg hover:bg-primary hover:text-white transition font-medium">
-          View Results
-        </button>
-      </div>
-    </form>
-  </div>
-
-  <!-- Footer -->
-  <footer class="mt-12 text-sm text-gray-600 text-center">
-    © 2026 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.
-  </footer>
-
-  <!-- Animation -->
   <style>
+    :root{
+      --regal:#094570;
+      --pastel:#85CCFF;
+      --white:#FFFFFF;
+    }
+
+    html{scroll-behavior:smooth;}
+
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
+      from { opacity: 0; transform: translateY(14px); }
       to { opacity: 1; transform: translateY(0); }
     }
-    .animate-fadeIn {
-      animation: fadeIn 0.8s ease-out;
-    }
+    .animate-fadeIn { animation: fadeIn .7s ease-out; }
   </style>
+</head>
 
-  <!-- JavaScript -->
+<body class="bg-white min-h-screen flex flex-col">
+
+  <!-- HEADER (same system as login) -->
+  <header class="bg-[var(--regal)] text-white fixed inset-x-0 top-0 z-50">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6">
+      <div class="flex h-16 items-center justify-between">
+        <a href="index.html" class="flex items-center gap-3">
+          <object
+            data="assets/images/himaayah-icon.svg"
+            type="image/svg+xml"
+            class="h-10 w-10"
+            style="color: var(--pastel);"
+            aria-label="Himaayah Icon"
+          ></object>
+          <div>
+            <div class="font-extrabold text-lg">Himaayah Institute of Arabic and Islamic Studies</div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </header>
+
+  <!-- PAGE -->
+  <main class="flex-1 pt-24 sm:pt-28 pb-12 px-4">
+
+    <!-- Intro -->
+    <section class="max-w-xl mx-auto text-center animate-fadeIn">
+      <h1 class="text-2xl sm:text-3xl font-extrabold text-[var(--regal)]">
+        Select Your Class
+      </h1>
+      <div class="mx-auto mt-4 h-1 w-14 rounded-full bg-[var(--pastel)]"></div>
+      <p class="mt-4 text-sm sm:text-base" style="color: rgba(9,69,112,0.78);">
+        Welcome to the Himaayah Student Portal. Choose your class to continue.
+      </p>
+    </section>
+
+    <!-- Card -->
+    <section class="max-w-md mx-auto mt-10 animate-fadeIn">
+      <div
+        class="rounded-2xl border bg-white p-7 sm:p-8"
+        style="border-color: rgba(9,69,112,0.14); box-shadow: 0 14px 30px rgba(9,69,112,0.10);"
+      >
+
+        <form id="classForm" class="space-y-5">
+
+          <div>
+            <label class="block text-sm font-semibold text-[var(--regal)] mb-1">
+              Student Name
+            </label>
+            <input
+              type="text"
+              id="studentName"
+              name="studentName"
+              required
+              placeholder="Enter your full name"
+              class="w-full rounded-xl px-4 py-3 border outline-none"
+              style="border-color: rgba(9,69,112,0.18);"
+            />
+          </div>
+
+          <div>
+            <label class="block text-sm font-semibold text-[var(--regal)] mb-1">
+              Select Class
+            </label>
+            <select
+              id="classSelect"
+              name="class"
+              required
+              class="w-full rounded-xl px-4 py-3 border outline-none bg-white"
+              style="border-color: rgba(9,69,112,0.18);"
+            >
+              <option value="">Choose your class</option>
+              <option value="awwal">Awwal Ibtidaaiyyah</option>
+              <option value="thaaniy">Thaaniy Ibtidaaiyyah</option>
+              <option value="thaalith">Thaalith Ibtidaaiyyah</option>
+              <option value="awwal-idaadi">Awwal Idaadiyyah</option>
+            </select>
+          </div>
+
+          <div class="pt-4 flex flex-col sm:flex-row gap-3">
+            <button
+              type="button"
+              onclick="goToExam()"
+              class="w-full rounded-full py-3 font-semibold text-white transition"
+              style="background: var(--regal);"
+            >
+              Take Exam
+            </button>
+
+            <button
+              type="button"
+              onclick="goToResults()"
+              class="w-full rounded-full py-3 font-semibold border transition"
+              style="border-color: rgba(9,69,112,0.18); color: var(--regal);"
+              onmouseover="this.style.background='#85CCFF'; this.style.color='#094570';"
+              onmouseout="this.style.background='transparent'; this.style.color='#094570';"
+            >
+              View Results
+            </button>
+          </div>
+
+        </form>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- MINIMAL FOOTER (as specified) -->
+  <footer class="py-8 text-center">
+    <p class="text-sm font-medium text-[#094570]">
+      © 2026 Himaayah Institute of Arabic and Islamic Studies. All rights reserved.
+    </p>
+    <p class="mt-1 text-xs" style="color: rgba(9,69,112,0.65);">
+      Student Portal
+    </p>
+  </footer>
+
+  <!-- JS -->
   <script>
     function goToExam() {
-      const classSelected = document.getElementById("classSelect").value;
-      if (!classSelected) {
+      const cls = document.getElementById("classSelect").value;
+      if (!cls) {
         alert("Please select your class first.");
         return;
       }
-      window.location.href = "exam-portal.html?class=" + classSelected;
+      window.location.href = "exam-portal.html?class=" + cls;
     }
 
     function goToResults() {
-      const classSelected = document.getElementById("classSelect").value;
-      if (!classSelected) {
+      const cls = document.getElementById("classSelect").value;
+      if (!cls) {
         alert("Please select your class first.");
         return;
       }
-      window.location.href = "result-portal.html?class=" + classSelected;
+      window.location.href = "result-portal.html?class=" + cls;
     }
   </script>
 
