--- a/contact.html
+++ b/contact.html
@@ -1,108 +1,307 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact | Himaayah Institute of Arabic and Islamic Studies</title>
   <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-white text-gray-800 font-serif">
 
-  <!-- Header -->
-  <header class="bg-[#094570] text-white shadow-md">
-    <div class="container mx-auto flex justify-between items-center py-4 px-6">
-      <div class="flex items-center space-x-3">
-        <img src="logo.png" alt="Himaayah Logo" class="h-12 w-auto">
-        <span class="text-xl font-bold">Himaayah Institute of Arabic and Islamic Studies</span>
+  <style>
+    :root{
+      --regal:#094570;
+      --pastel:#85CCFF;
+      --white:#FFFFFF;
+    }
+    html{scroll-behavior:smooth;}
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(14px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fadeIn { animation: fadeIn .7s ease-out; }
+
+    .card{
+      border:1px solid rgba(9,69,112,0.14);
+      border-radius:1.25rem;
+      background:var(--white);
+      box-shadow: 0 14px 30px rgba(9,69,112,0.10);
+    }
+
+    .muted{ color: rgba(9,69,112,0.78); }
+    .muted-2{ color: rgba(9,69,112,0.65); }
+
+    .focus-brand:focus{
+      outline:none;
+      border-color: rgba(133,204,255,0.95) !important;
+      box-shadow: 0 0 0 4px rgba(133,204,255,0.18);
+    }
+  </style>
+</head>
+
+<body class="bg-white min-h-screen flex flex-col">
+
+  <!-- HEADER (same nav structure across site) -->
+  <header class="bg-[var(--regal)] text-white fixed inset-x-0 top-0 z-50">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6">
+      <div class="flex h-16 items-center justify-between">
+
+        <a href="index.html" class="flex items-center gap-3 min-w-0">
+          <object
+            data="assets/images/himaayah-icon.svg"
+            type="image/svg+xml"
+            class="h-10 w-10 shrink-0"
+            style="color: var(--pastel);"
+            aria-label="Himaayah Icon"
+          ></object>
+
+          <div class="min-w-0">
+            <div class="font-extrabold truncate text-lg sm:text-xl">Himaayah Institute</div>
+            <div class="hidden sm:block text-xs text-white/70">Arabic. Qur’an. Islamic Sciences.</div>
+          </div>
+        </a>
+
+        <nav class="hidden md:flex items-center gap-6 text-sm font-medium">
+          <a href="index.html" class="hover:text-[var(--pastel)] transition">Home</a>
+          <a href="about.html" class="hover:text-[var(--pastel)] transition">About</a>
+          <a href="curriculum.html" class="hover:text-[var(--pastel)] transition">Curriculum</a>
+          <a href="login.html" class="hover:text-[var(--pastel)] transition">Login</a>
+          <a href="payment-portal.html" class="hover:text-[var(--pastel)] transition">Register</a>
+          <a href="blogpost.html" class="hover:text-[var(--pastel)] transition">Blog</a>
+          <a href="contact.html" class="text-[var(--pastel)] underline underline-offset-4 font-semibold">Contact</a>
+        </nav>
+
+        <button
+          id="menuBtn"
+          class="md:hidden inline-flex items-center justify-center rounded-xl border border-white/20 px-3 py-2 text-sm hover:bg-white/10"
+          aria-expanded="false"
+          aria-controls="mobileMenu"
+        >
+          Menu
+        </button>
       </div>
-      <nav class="hidden md:flex space-x-6 font-medium">
-        <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
-        <a href="about.html" class="hover:text-[#85CCFF]">About</a>
-        <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
-        <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
-        <a href="contact.html" class="text-[#85CCFF] font-semibold">Contact</a>
-      </nav>
+
+      <div id="mobileMenu" class="md:hidden hidden pb-4">
+        <nav class="grid gap-2 rounded-2xl border border-white/10 bg-white/5 p-3 text-sm">
+          <a href="index.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Home</a>
+          <a href="about.html" class="rounded-xl px-3 py-2 hover:bg-white/10">About</a>
+          <a href="curriculum.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Curriculum</a>
+          <a href="login.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Login</a>
+          <a href="payment-portal.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Register</a>
+          <a href="blogpost.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Blog</a>
+          <a href="contact.html" class="rounded-xl px-3 py-2 bg-white/10 text-[var(--pastel)] font-semibold">Contact</a>
+        </nav>
+      </div>
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section class="bg-[#094570] text-white py-20 px-6 text-center">
-    <div class="max-w-3xl mx-auto">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Have Questions or Suggestions?</h1>
-      <p class="text-lg opacity-90">We’d love to hear from you. Reach out for inquiries, registration, or support.</p>
-    </div>
-  </section>
+  <!-- PAGE -->
+  <main class="flex-1 pt-24 sm:pt-28 pb-12 px-4">
+    <section class="max-w-6xl mx-auto animate-fadeIn">
 
-  <!-- Contact Info -->
-  <section class="py-16 px-6">
-    <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-12 items-start">
-
-      <!-- Contact Details -->
-      <div>
-        <h2 class="text-2xl font-bold text-[#094570] mb-4">Get in Touch</h2>
-        <p class="text-gray-700 mb-6 leading-relaxed">
-          Whether you want to join our programs, or simply learn more about Himaayah,
-          you can contact us through any of the following channels.
+      <!-- Editorial hero -->
+      <div class="text-center">
+        <p class="text-xs font-semibold tracking-widest uppercase"
+           style="color: rgba(9,69,112,0.65);">
+          Contact
         </p>
 
-        <div class="space-y-4">
-          <p><strong>📞 Call / SMS:</strong> <a href="tel:+2348136115948" class="text-[#094570] hover:underline">+234 708 015 2258</a></p>
-          <p><strong>💬 WhatsApp Channel:</strong> 
-            <a href="https://www.whatsapp.com/channel/0029Vb5yFdJ2f3ENd4V1r42n" target="_blank" class="text-[#094570] hover:underline">
-              Join our WhatsApp Channel
-            </a>
-          </p>
-          <p><strong>📢 Telegram Channel:</strong> 
-            <a href="https://t.me/mahadulhimaayah" target="_blank" class="text-[#094570] hover:underline">
-              https://t.me/mahadulhimaayah
-            </a>
-          </p>
-          <p><strong>📧 Email:</strong> 
-            <a href="mailto:himaayahmadrasah@gmail.com" class="text-[#094570] hover:underline">
-              mahadulhimaayah@gmail.com
-            </a>
-          </p>
+        <h1 class="mt-3 text-3xl sm:text-4xl md:text-5xl font-extrabold text-[var(--regal)] leading-tight">
+          Questions, registration support, or guidance.
+        </h1>
+
+        <div class="mx-auto mt-5 h-1 w-14 rounded-full bg-[var(--pastel)]"></div>
+
+        <p class="mx-auto mt-5 max-w-3xl text-sm sm:text-base muted">
+          We are an online institute. Reach out through any channel below. We respond with clarity and direction.
+        </p>
+      </div>
+
+      <!-- Content -->
+      <div class="mt-10 grid grid-cols-1 lg:grid-cols-12 gap-8 items-start">
+
+        <!-- Left: Contact details -->
+        <div class="lg:col-span-5">
+          <div class="card p-6 sm:p-8">
+            <h2 class="text-xl sm:text-2xl font-extrabold text-[var(--regal)]">Get in touch</h2>
+            <p class="mt-3 text-sm sm:text-base muted leading-relaxed">
+              For inquiries, registration, or support, use the most convenient option.
+            </p>
+
+            <div class="mt-6 space-y-4 text-sm sm:text-base">
+              <div class="flex gap-3">
+                <span class="mt-1 h-2 w-2 rounded-full bg-[var(--pastel)] shrink-0"></span>
+                <div class="min-w-0">
+                  <div class="font-semibold text-[var(--regal)]">Call / SMS</div>
+                  <a href="tel:+2347080152258" class="muted hover:underline break-all">+234 708 015 2258</a>
+                </div>
+              </div>
+
+              <div class="flex gap-3">
+                <span class="mt-1 h-2 w-2 rounded-full bg-[var(--pastel)] shrink-0"></span>
+                <div class="min-w-0">
+                  <div class="font-semibold text-[var(--regal)]">WhatsApp Channel</div>
+                  <a href="https://www.whatsapp.com/channel/0029Vb5yFdJ2f3ENd4V1r42n" target="_blank" rel="noopener"
+                     class="muted hover:underline break-all">
+                    Join our WhatsApp Channel
+                  </a>
+                </div>
+              </div>
+
+              <div class="flex gap-3">
+                <span class="mt-1 h-2 w-2 rounded-full bg-[var(--pastel)] shrink-0"></span>
+                <div class="min-w-0">
+                  <div class="font-semibold text-[var(--regal)]">Telegram</div>
+                  <a href="https://t.me/mahadulhimaayah" target="_blank" rel="noopener"
+                     class="muted hover:underline break-all">
+                    https://t.me/mahadulhimaayah
+                  </a>
+                </div>
+              </div>
+
+              <div class="flex gap-3">
+                <span class="mt-1 h-2 w-2 rounded-full bg-[var(--pastel)] shrink-0"></span>
+                <div class="min-w-0">
+                  <div class="font-semibold text-[var(--regal)]">Email</div>
+                  <a href="mailto:mahadulhimaayah@gmail.com" class="muted hover:underline break-all">
+                    mahadulhimaayah@gmail.com
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="mt-7 h-px" style="background: rgba(9,69,112,0.14);"></div>
+
+            <p class="mt-6 text-xs muted-2 leading-relaxed">
+              Our programs are online. Students can learn from anywhere in the world.
+            </p>
+          </div>
         </div>
+
+        <!-- Right: Form -->
+        <div class="lg:col-span-7">
+          <div class="card p-6 sm:p-8">
+            <h2 class="text-xl sm:text-2xl font-extrabold text-[var(--regal)]">Send a message</h2>
+            <p class="mt-3 text-sm sm:text-base muted">
+              This form is a clean front-end. If you want it to actually send emails, we can connect it later.
+            </p>
+
+            <form class="mt-6 space-y-5" onsubmit="event.preventDefault(); showSent();">
+              <div>
+                <label for="name" class="block text-sm font-semibold text-[var(--regal)] mb-2">Full Name</label>
+                <input
+                  id="name"
+                  name="name"
+                  type="text"
+                  required
+                  placeholder="Your name"
+                  class="w-full rounded-2xl px-4 py-3 border bg-white focus-brand"
+                  style="border-color: rgba(9,69,112,0.18);"
+                />
+              </div>
+
+              <div>
+                <label for="email" class="block text-sm font-semibold text-[var(--regal)] mb-2">Email</label>
+                <input
+                  id="email"
+                  name="email"
+                  type="email"
+                  required
+                  placeholder="you@example.com"
+                  class="w-full rounded-2xl px-4 py-3 border bg-white focus-brand"
+                  style="border-color: rgba(9,69,112,0.18);"
+                />
+              </div>
+
+              <div>
+                <label for="message" class="block text-sm font-semibold text-[var(--regal)] mb-2">Message</label>
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="5"
+                  required
+                  placeholder="Write your message..."
+                  class="w-full rounded-2xl px-4 py-3 border bg-white focus-brand"
+                  style="border-color: rgba(9,69,112,0.18);"
+                ></textarea>
+                <p class="mt-2 text-xs muted-2">Keep it short and specific. It gets answered faster.</p>
+              </div>
+
+              <div id="sentBox"
+                   class="hidden rounded-2xl border p-4 text-sm"
+                   style="border-color: rgba(9,69,112,0.14); color: rgba(9,69,112,0.82); background: rgba(133,204,255,0.10);">
+                Message saved on this device. For now, also send your message via WhatsApp or Email so we receive it.
+              </div>
+
+              <button
+                type="submit"
+                class="w-full rounded-full px-6 py-3 font-semibold text-white"
+                style="background: var(--regal);"
+              >
+                Send Message
+              </button>
+
+              <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+                <a
+                  href="mailto:mahadulhimaayah@gmail.com"
+                  class="text-center rounded-full px-6 py-3 font-semibold border"
+                  style="border-color: rgba(9,69,112,0.18); color: var(--regal);"
+                >
+                  Email Us
+                </a>
+                <a
+                  href="https://www.whatsapp.com/channel/0029Vb5yFdJ2f3ENd4V1r42n"
+                  target="_blank"
+                  rel="noopener"
+                  class="text-center rounded-full px-6 py-3 font-semibold"
+                  style="background: rgba(133,204,255,0.18); color: var(--regal);"
+                >
+                  WhatsApp Channel
+                </a>
+              </div>
+            </form>
+          </div>
+        </div>
+
       </div>
+    </section>
+  </main>
 
-      <!-- Contact Form -->
-      <div class="bg-gray-50 border rounded-lg p-8 shadow-sm">
-        <h2 class="text-2xl font-bold text-[#094570] mb-6">Send Us a Message</h2>
-        <form class="space-y-5">
-          <div>
-            <label for="name" class="block text-sm font-medium">Full Name</label>
-            <input type="text" id="name" name="name" required
-              class="mt-1 w-full border p-3 rounded-md focus:ring-[#094570] focus:border-[#094570]">
-          </div>
-          <div>
-            <label for="email" class="block text-sm font-medium">Email</label>
-            <input type="email" id="email" name="email" required
-              class="mt-1 w-full border p-3 rounded-md focus:ring-[#094570] focus:border-[#094570]">
-          </div>
-          <div>
-            <label for="message" class="block text-sm font-medium">Message</label>
-            <textarea id="message" name="message" rows="4" required
-              class="mt-1 w-full border p-3 rounded-md focus:ring-[#094570] focus:border-[#094570]"></textarea>
-          </div>
-          <button type="submit"
-            class="w-full bg-[#094570] text-white py-3 rounded-lg hover:bg-[#0A3552] transition">
-            Send Message
-          </button>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <!-- Map Section (Optional Placeholder) -->
-  <section class="bg-gray-100 py-10 text-center">
-    <p class="text-gray-700">Our programs are online. You can learn from anywhere in the world.</p>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-[#094570] text-white py-8 text-center">
-    <p class="text-sm">&copy; 2026 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.</p>
-    <p class="mt-2">Email: mahadulhimaayah@gmail.com | Call: +234 813 611 5948</p>
+  <!-- Minimal Footer (no full background) -->
+  <footer class="py-8 text-center">
+    <p class="text-sm font-medium text-[#094570]">
+      © 2026 Himaayah Institute of Arabic and Islamic Studies. All rights reserved.
+    </p>
   </footer>
+
+  <script>
+    // Mobile menu toggle
+    const menuBtn = document.getElementById('menuBtn');
+    const mobileMenu = document.getElementById('mobileMenu');
+    menuBtn?.addEventListener('click', () => {
+      const isOpen = !mobileMenu.classList.contains('hidden');
+      mobileMenu.classList.toggle('hidden');
+      menuBtn.setAttribute('aria-expanded', String(!isOpen));
+      menuBtn.textContent = isOpen ? 'Menu' : 'Close';
+    });
+
+    // Demo "sent" message (no backend yet)
+    function showSent(){
+      const sentBox = document.getElementById('sentBox');
+      sentBox.classList.remove('hidden');
+      try{
+        const payload = {
+          name: document.getElementById('name').value.trim(),
+          email: document.getElementById('email').value.trim(),
+          message: document.getElementById('message').value.trim(),
+          at: new Date().toISOString()
+        };
+        const list = JSON.parse(localStorage.getItem('himaayah_contact_messages') || '[]');
+        list.push(payload);
+        localStorage.setItem('himaayah_contact_messages', JSON.stringify(list));
+      }catch(e){}
+      // Keep content, don't wipe. User can copy if needed.
+    }
+  </script>
 
 </body>
 </html>
